package dinners.thanksgiving.domain;

@SuppressWarnings("ALL")
public enum DishType {
    APPETIZER,
    MAIN_COURSE,
    DESSERT,
    BEVERAGE
}